--- a/templates/About_me.html
+++ b/templates/About_me.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-       <title>About me</title>
-     <link rel="stylesheet" href="/static/css/about_me.css">
-</head>
+{% extends "base.html" %}
 
-<body>
-    <p id="red">Red colored text</p>
-
-    <p id="blue">Blue colored text</p>
-</body>
-</html>
+{% block content %}
+    <p>More about me :)</p>
+{% endblock content %}
