--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="\static\css\index.css">
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
-<h1>Homepage</h1>
-<p>Erster Absatz!</p>
-<p>{{}}</p>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <p>Hello, index.html here!</p>
+{% endblock content %}
