Neue Seiten hochgeladen

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,18 @@
-{% extends "base.html" %}
+{% extends "frame.html" %}
+
+{% block title %}
+    index
+{% endblock title %}
+
+{% block css %}
+
+{% endblock css %}
+
+
 {% block content %}
-    <p>Hello, index.html here!</p>
+
+Homepage
+<p>Hello, index.html here!</p>
+
+
 {% endblock content %}
