Upload Accounts, Books, Register

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Super Rezepte Blog</h1>
 <!-- CARD-->
-{% for receipe in receipes %}
+{% for receipe in recepies %}
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">{{receipe.name}}</h5>
