--- a/templates/vorspeisen.html
+++ b/templates/vorspeisen.html
@@ -3,14 +3,8 @@
 Vorspeisen
 {% endblock title %}
 
-{% block css %}
-
-<link rel="stylesheet" href="/static/css/style.css">
-
-{% endblock css %}
-
 {% block content %}
 
-<h1>Alle Vorspeisen</h1>
+Alle Vorspeisen
 
 {% endblock content %}
