Anpassung Link Navbar

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -60,7 +60,7 @@
                     Blog
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Vorspeisen</a>
+                    <a class="dropdown-item" href={{url_for('blog')}}>Rezepte</a>
                     <a class="dropdown-item" href="#">Hauptspeisen</a>
                     <a class="dropdown-item" href="#">Nachspeisen</a>
                 </div>
