--- a/templates/frame.html
+++ b/templates/frame.html
@@ -61,8 +61,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href={{url_for('blog')}}>Rezepte</a>
-                    <a class="dropdown-item" href="#">Hauptspeisen</a>
-                    <a class="dropdown-item" href="#">Nachspeisen</a>
+                    <a class="dropdown-item" href={{url_for('hauptspeisen')}}>Hauptspeisen</a>
+                    <a class="dropdown-item" href={{url_for('nachspeisen')}}>Nachspeisen</a>
                 </div>
             </li>
             <li class="nav-item">
