--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "frame.html" %}
 
 {% block title %}
-register
+login
 {% endblock title %}
 
 {% block css %}
@@ -10,17 +10,13 @@ register
 
 {% block content %}
 
-<h1>Register your Account here</h1>
+<h1>Please login here</h1>
 
 <form method="post">
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputName1">Username</label>
-        <input name="username" type="text" class="form-control" id="exampleInputName1">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
