Anpassungen diverse Seiten

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,14 @@
 body {
 background.color: red;
 }
+
+.row {
+padding: 20px;
+margin: 40px;
+}
+
+.table table-striped{
+padding: 20px;
+margin: 40px;
+}
+
