--- a/templates/books.html
+++ b/templates/books.html
@@ -1,17 +1,20 @@
 {% extends "frame.html" %}
 
 {% block title %}
-books
+Books
 {% endblock title %}
 
 {% block css %}
+<link rel="stylesheet"
+          href="\static\css\index.css"
+          type="text/css">
 
 {% endblock css %}
 
 
 {% block content %}
 
-<h1>books</h1>
+<h1>Books</h1>
 
 <table class="table table-striped">
     <thead>
