--- a/templates/friseur.html
+++ b/templates/friseur.html
@@ -5,7 +5,7 @@
 
 {% block css %}
 
-<link rel="stylesheet" href="/static/css/style.css">
+<link rel="stylesheet" href="/static/css/index.css">
 
 {% endblock css %}
 
@@ -18,13 +18,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="landscape1.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\landscape2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="landscape2.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\landscape1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="landscape3.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\landscape3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -40,15 +40,15 @@
   <div class="row">
     <div class="col-sm">
       <h4><p>Austria</p></h4>
-      <img src="austria.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\austria.jpg" class="d-block w-100" alt="...">
           </div>
     <div class="col-sm">
     <h4><p>Switzerland</p></h4>
-      <img src="schweiz.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\schweiz.jpg" class="d-block w-100" alt="...">
           </div>
     <div class="col-sm">
       <h4><p>Germany</p></h4>
-      <img src="schweiz.jpg" class="d-block w-100" alt="...">
+      <img src="\static\img\schweiz.jpg" class="d-block w-100" alt="...">
           </div>
   </div>
 </div>
