--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,164 @@
 {% extends "frame.html" %}
 
 {% block title %}
-    index
+index
 {% endblock title %}
 
 {% block css %}
-
+<link rel="stylesheet"
+          href="\static\css\index.css"
+          type="text/css">
 {% endblock css %}
 
 
 {% block content %}
 
-Homepage
-<p>Hello, index.html here!</p>
+<h1>Welcome</h1>
+
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="\static\img\forest1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <a class="carousel-caption d-none d-md-block" href="fakebook">
+                    <h2>My Fakebook</h2>
+                    <p>Hier zu meinem Fakebook!</p>
+                </a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="\static\img\frost1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <a class="carousel-caption d-none d-md-block" href="books">
+                    <h2>Books</h2>
+                    <p>All about books!</p>
+                </a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="\static\img\sunset1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <a class="carousel-caption d-none d-md-block" href="blog">
+                    <h2>Rezepte</h2>
+                    <p>Hier geht es zu den Rezepten!</p>
+                </a>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div>
+  <div class="container">
+  <div class="row">
+    <div class="col">
+     <h5><p>Online Anfrage</p></h5>
+      <form id="anfrage">
+  <div class="form-group">
+    <label for="exampleFormControlInput1">Vor- und Nachname</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Max Mustermann">
+  </div>
+        <div class="form-group">
+    <label for="exampleFormControlInput2">Telefonnummer</label>
+    <input type="number" class="form-control" id="exampleFormControlInput2" placeholder="0123456">
+  </div>
+         <div class="form-group">
+    <label for="exampleFormControlInput3">E-Mail</label>
+    <input type="email" class="form-control" id="exampleFormControlInput3" placeholder="max.mustermann@email.com">
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Datum</label>
+    <input type="d" class="form-control" id="exampleFormControlSelect1">
+          </input>
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Ihre Anfrage</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+</form>
+    </div>
+    <div class="col">
+      <h5><p>Termine</p></h5>
+      <table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Tage</th>
+      <th scope="col">Öffnungszeiten</th>
+         </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Montag - Freitag</th>
+      <td>09:00 bis 19:00 Uhr</td>
+    </tr>
+    <tr>
+      <th scope="row">Samstag</th>
+      <td>09:00 bis 19:00 Uhr</td>
+
+    </tr>
+    </tbody>
+</table>
+    </div>
+  </div>
+    </div>
+  <div class="accordion" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h2 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Frage Nr. 1
+        </button>
+      </h2>
+    </div>
+
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+        Platzhaltertext
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Frage Nr. 2
+        </button>
+      </h2>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+      <div class="card-body">
+       Platzhaltertext
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h2 class="mb-0">
+        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Frage Nr. 3
+        </button>
+      </h2>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+      <div class="card-body">
+        Platzhaltertext
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 
 {% endblock content %}
